trying to fix header spacing

--- a/assets/scss/mpowheard.scss
+++ b/assets/scss/mpowheard.scss
@@ -364,6 +364,13 @@ body {
 			h1, h2, p, a {
 				text-align:center !important;
 			}
+			h2, p, a {
+				padding-bottom:0.5rem;
+				padding-top:0.5rem;
+			}
+			p, a {
+				line-spacing:1.5rem;
+			}
 		}
 	}
 	section {
